# amdgpu-top

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
debian/DEBIAN/: control  postinst
debian/usr/share/applications/: amd-gpu-monitor.desktop
include/: amdgpu_ids.hpp  device_info.hpp  gpu_stats.hpp  layout.hpp  logger.hpp  process_info.hpp
src/: gpu_stats.cpp  layout.cpp  main.cpp  process_info.cpp
